# hackathon-iag-202404

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  rag.py  services.py  simple.py  utils.py
src/api/: run.py
src/api/routes/: live.py
src/apis/: rag_routes.py  simple_routes.py
src/chroma_db/: chroma.sqlite3
src/config/: settings.py
src/models/: chat.py
