[tool.poetry]
name = "hackathon-iag-202404"
version = "0.1.0"
description = ""
authors = ["Josu Bermudez <jbermudez@plainconcepts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
fastapi = {extras = ["all"], version = "^0.110.1"}
langchain = "^0.1.16"
langchain-openai = "^0.1.3"
azure-ai-documentintelligence = "^1.0.0b3"
azure-identity = "^1.16.0"
chromadb = "^0.4.24"

[tool.poetry.scripts]
start = "hackathon_iag_202404.main:debug"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
